--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,12 @@ esp32-hal = { version = "0.10.0", features = [ "embassy", "async", "default", "e
 esp-backtrace     = { version = "0.5.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
 esp-println       = { version = "0.4.0", features = ["esp32"] }
 static_cell       = "1.0.0"
-embedded-hal-async = { version = "0.2.0-alpha.0" }
 embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
 embassy-time       = { version = "0.1.0", features = ["nightly"] }
+anyhow = {version = "1.0.69", default_features = false }
+esp-alloc = {version = "0.2.0", features = ["oom-handler"] }
+ssd1306 = "0.7.1"
+embedded-graphics = "0.7.1"
 
 
 
