--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,6 +4,7 @@ runner = "espflash flash --monitor"
 [build]
 rustflags = [
   "-C", "link-arg=-nostartfiles",
+  "-C", "link-arg=-Trom_functions.x",
   "-C", "link-arg=-Wl,-Tlinkall.x",
 ]
 target = "xtensa-esp32-none-elf"
