--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,20 @@ resolver = "2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-esp32-hal = { version = "0.10.0", features = [ "embassy", "async", "default", "embassy-time-timg0"] }
-esp-backtrace     = { version = "0.5.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
-esp-println       = { version = "0.4.0", features = ["esp32"] }
-static_cell       = "1.0.0"
-embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
-embassy-time       = { version = "0.1.0", features = ["nightly"] }
 anyhow = {version = "1.0.69", default_features = false }
-esp-alloc = {version = "0.2.0", features = ["oom-handler"] }
-ssd1306 = "0.7.1"
+embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
+embassy-futures = "0.1.0"
+embassy-time       = { version = "0.1.0", features = ["nightly"] }
 embedded-graphics = "0.7.1"
+esp-alloc = {version = "0.2.0", features = ["oom-handler"] }
+esp-backtrace     = { version = "0.5.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
+esp-println       = { version = "0.4.0", features = ["esp32", "log"] }
+esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", features = ["esp32-async", "esp32", "esp-now"] }
+esp32-hal = { version = "0.10.0", features = [ "embassy", "async", "default", "embassy-time-timg0"] }
+futures-util = {version = "0.3.26", default_features = false }
+log = "0.4.17"
+ssd1306 = "0.7.1"
+static_cell       = "1.0.0"
 
 
 
@@ -35,3 +39,7 @@ lto = "off"
 
 [profile.dev.package.xtensa-lx-rt]
 opt-level = 'z'
+
+
+[profile.dev.package.esp-wifi]
+opt-level = 2
